added text on test

--- a/test.html
+++ b/test.html
@@ -10,8 +10,9 @@
   <body>
     <div class="container">
       <h1 id="andyglovergithubio">andyglover.github.io</h1>
-<p>A website for andyglover.</p>
       <p>A website for andyglover.</p>
+      <p>I don't really know how to build websites yet, but i figured i should make one... thanks for visiting. : )</p>
+      
 
     </div>
   </body>
