added bandcamp link

--- a/test.html
+++ b/test.html
@@ -12,7 +12,10 @@
       <h1 id="andyglovergithubio">andyglover.github.io</h1>
       <p>A website for andyglover.</p>
       <p>I don't really know how to build websites yet, but i figured i should make one... thanks for visiting. : )</p>
-      
+      <p>
+        <a href="http://www.andyglovermusic.com">andyglovermusic.com</a> (redirects to bandcamp)
+        
+      </p>
 
     </div>
   </body>
