--- a/test.html
+++ b/test.html
@@ -13,12 +13,12 @@
       <p>A website for andyglover.</p>
       <p>I don't really know how to build websites yet, but i figured i should make one... thanks for visiting. : )</p>
       <p>
-        <a href="http://www.andyglovermusic.com">andyglovermusic.com</a> (redirects to bandcamp)
-        <a href="https://twitter.com/andyglover">twitter</a>
-        <a href="https://www.facebook.com/andyglovermusic">facebook</a>
-        <a href="https://www.instagram.com/andyglov3r/">instagram</a>
-        <a href="https://www.youtube.com/user/andyglov3r">youtube</a>
-        <a href="https://soundcloud.com/andyglover">soundcloud</a>
+        <a href="http://www.andyglovermusic.com">andyglovermusic.com</a> (redirects to bandcamp)<br>
+        <a href="https://twitter.com/andyglover">twitter</a><br>
+        <a href="https://www.facebook.com/andyglovermusic">facebook</a><br>
+        <a href="https://www.instagram.com/andyglov3r/">instagram</a><br>
+        <a href="https://www.youtube.com/user/andyglov3r">youtube</a><br>
+        <a href="https://soundcloud.com/andyglover">soundcloud</a><br>
       </p>
 
     </div>
