--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
   <body>
     <div class="container">
       <h1 id="andyglovergithubio">andyglover.github.io</h1>
-<p>A website for andyglover. test edit</p>
+      <p>A website for andyglover.</p>
+      <p>I don't really know how to build websites yet, but i figured i should make one... thanks for visiting. : )</p>
+      <p>
+        <a href="http://www.andyglovermusic.com">andyglovermusic.com</a> (redirects to bandcamp)<br>
+        <a href="https://twitter.com/andyglover">twitter</a><br>
+        <a href="https://www.facebook.com/andyglovermusic">facebook</a><br>
+        <a href="https://www.instagram.com/andyglov3r/">instagram</a><br>
+        <a href="https://www.youtube.com/user/andyglov3r">youtube</a><br>
+        <a href="https://soundcloud.com/andyglover">soundcloud</a><br>
+        <br><br>
+        <a href="https://bandcamp.com/contact?b=1740635932&n=Andy%20Glover">contact me</a>
+      </p>
 
     </div>
   </body>
