--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>andyglover.github.io</title>
     <link href="/assets/css/style.css?v=70d780ec9d0c78cb9fc0b3aa4ed6eb08b62ea061" rel="stylesheet">
+    <style>
+      body{
+        text-overflow:ellipsis; 
+white-space:nowrap; 
+overflow:hidden;
+      }</style>
   </head>
   <body>
     <div class="container">
