--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>andyglover.github.io</title>
-    <link href="/assets/css/style.css?v=70d780ec9d0c78cb9fc0b3aa4ed6eb08b62ea061" rel="stylesheet">
+    <!--<link href="/assets/css/style.css?v=70d780ec9d0c78cb9fc0b3aa4ed6eb08b62ea061" rel="stylesheet">-->
   </head>
   <body>
     <div class="container" style="word-wrap: break-word;">
