--- a/test.html
+++ b/test.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>andyglover.github.io</title>
-    <!--<link href="/assets/css/style.css?v=70d780ec9d0c78cb9fc0b3aa4ed6eb08b62ea061" rel="stylesheet">-->
+    <link href="/assets/css/style.css?v=70d780ec9d0c78cb9fc0b3aa4ed6eb08b62ea061" rel="stylesheet">
+    <style>p{style="word-wrap: break-word !important;"}</style>
   </head>
   <body>
-    <div class="container" style="word-wrap: break-word;">
+    <div class="container" >
       <h1 id="andyglovergithubio">andyglover.github.io</h1>
       <p>A website for andyglover.</p>
       <p>I don't really know how to build websites yet, but i figured i should make one... thanks for visiting. : )</p>
