test wordwrap 6-moved it to div tag

--- a/test.html
+++ b/test.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>andyglover.github.io</title>
     <link href="/assets/css/style.css?v=70d780ec9d0c78cb9fc0b3aa4ed6eb08b62ea061" rel="stylesheet">
-    <style>div{style="word-wrap: break-word !important;"}</style>
   </head>
   <body>
-    <div class="container" >
+    <div class="container" style="word-wrap: break-word !important;">
       <h1 id="andyglovergithubio">andyglover.github.io</h1>
       <p>A website for andyglover.</p>
       <p>I don't really know how to build websites yet, but i figured i should make one... thanks for visiting. : )</p>
