--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@
     <link href="/assets/css/style.css?v=70d780ec9d0c78cb9fc0b3aa4ed6eb08b62ea061" rel="stylesheet">
   </head>
   <body>
-    <div class="container" style="word-wrap: break-word !important;">
+    <div class="container" style="word-wrap: break-word !important; word-break: break-all !important;">
       <h1 id="andyglovergithubio">andyglover.github.io</h1>
       <p>A website for andyglover.</p>
       <p>I don't really know how to build websites yet, but i figured i should make one... thanks for visiting. : )</p>
