--- a/index.html
+++ b/index.html
@@ -6,12 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>andyglover.github.io</title>
     <link href="/assets/css/style.css?v=70d780ec9d0c78cb9fc0b3aa4ed6eb08b62ea061" rel="stylesheet">
-    <style>
-      body{
-        text-overflow:ellipsis; 
-white-space:nowrap; 
-overflow:hidden;
-      }</style>
   </head>
   <body>
     <div class="container">
@@ -25,6 +19,7 @@ overflow:hidden;
         <a href="https://www.instagram.com/andyglov3r/">instagram</a><br>
         <a href="https://www.youtube.com/user/andyglov3r">youtube</a><br>
         <a href="https://soundcloud.com/andyglover">soundcloud</a><br>
+        <a href="https://andyglovermusic.wordpress.com">wordpress</a>
         <br><br>
         <a href="https://bandcamp.com/contact?b=1740635932&n=Andy%20Glover">contact me</a>
       </p>
