bandcamp link add

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <p>A website for andyglover.</p>
       <p>I don't really know how to build websites yet, but i figured i should make one... thanks for visiting. : )</p>
       <p>
-        <a href="http://www.andyglovermusic.com">andyglovermusic.com</a> (redirects to bandcamp)<br>
+        <a href="http://www.andyglovermusic.com">andyglovermusic.com</a> / <a href="https://andyglover.bandcamp.com">andyglover.bandcamp.com</a><br>
         <a href="https://twitter.com/andyglover">twitter</a><br>
         <a href="https://www.facebook.com/andyglovermusic">facebook</a><br>
         <a href="https://www.instagram.com/andyglov3r/">instagram</a><br>
