--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       <p>A website for andyglover.</p>
       <p>I don't really know how to build websites yet, but i figured i should make one... thanks for visiting. : )</p>
       <p>
+        this is a test change to this page to practice using github.
+      </p>
+      <p>
         <a href="http://www.andyglovermusic.com">andyglovermusic.com</a> / <a href="https://andyglover.bandcamp.com">andyglover.bandcamp.com</a><br>
         <a href="https://twitter.com/andyglover">twitter</a><br>
         <a href="https://www.facebook.com/andyglovermusic">facebook</a><br>
