moved site from codepen to github
moved my freecodecamp tutorial portfolio over to my github page

--- a/index.html
+++ b/index.html
@@ -1,29 +1,40 @@
-
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>andyglover.github.io</title>
-    <link href="/assets/css/style.css?v=70d780ec9d0c78cb9fc0b3aa4ed6eb08b62ea061" rel="stylesheet">
-  </head>
-  <body>
-    <div class="container">
-      <h1 id="andyglovergithubio">andyglover.github.io</h1>
-      <p>A website for andyglover.</p>
-      <p>I don't really know how to build websites yet, but i figured i should make one... thanks for visiting. : )</p>
-      <p>
-        <a href="http://www.andyglovermusic.com">andyglovermusic.com</a> / <a href="https://andyglover.bandcamp.com">andyglover.bandcamp.com</a><br>
-        <a href="https://twitter.com/andyglover">twitter</a><br>
-        <a href="https://www.facebook.com/andyglovermusic">facebook</a><br>
-        <a href="https://www.instagram.com/andyglov3r/">instagram</a><br>
-        <a href="https://www.youtube.com/user/andyglov3r">youtube</a><br>
-        <a href="https://soundcloud.com/andyglover">soundcloud</a><br>
-        <a href="https://andyglovermusic.wordpress.com">wordpress</a>
-        <br><br>
-        <a href="https://bandcamp.com/contact?b=1740635932&n=Andy%20Glover">contact me</a>
-      </p>
-
-    </div>
-  </body>
+<html>
+<head>
+  <title>Andy's Coding Projects</title>
+  <style>
+    h1{font-family:fantasy; font-size: 40px;}
+    h2{font-family:cursive; font-size: 25px;}
+    a{text-decoration: none;}
+    a:hover{text-decoration: underline; font-weight: bold;}
+    ul{text-align: left; }
+    body{ font-family: monospace; text-align:center; }
+    div { width: 500px; margin: 0 auto; background-color: gainsboro; padding:10px; border-radius: 5px; line-height: 25px;text-align:justify;}
+    div#foot { text-align:center; margin-top: 10px; width:300px;}
+    hr { margin: 25px auto 25px; width:500px;}
+    </style>
+    
+  
+</head>
+<body>
+  <h1>My freeCodeCamp Projects</h1>
+  <div id="intro">I'm currently focused on learning to code by beginning with front end web development. Here are the projects I've worked on through FreeCodeCamp's curriculum.</div>
+  <hr>
+  <h2>Projects:</h2>
+  <div id="projects">
+    The following projects are from the Responsive Web Design learning course on freeCodeCamp. They were built to practice my technical skills and to satisfy the requirements set by the course. I look forward to creating more fleshed-out projects as I discover and perfect my personal style, but for now, my focus is on learning the fundamentals.
+    <ul>
+      <li><a href="marvin.html">Build a Tribute Page</a></li>
+      <li><a href="survey.html">Build a Survey Form</a></li>
+      <li><a href="productlanding.html">Build a Product Landing Page</a></li>
+      <li><a href="techdoc.html">Build a Technical Documentation Page</a></li>
+      <li><a href="personalportfolio.html">Build a Personal Portfolio Webpage</a></li>
+      
+      <li>...more coming soon!</li>
+    </ul>
+  </div>
+  <hr>
+  <div id="foot"><p>Connect with me on LinkedIn:<br />
+    @<a href="https://www.linkedin.com/in/andyglover1/" alt="andyglover1 on LinkedIn">andyglover1</a></p></div>
+</body>
 </html>
