changed title of page to andyglover.io

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
   
 </head>
 <body>
-  <h1>My freeCodeCamp Projects</h1>
+  <h1>AndyGlover.io</h1>
   <div id="intro">I'm currently focused on learning to code by beginning with front end web development. Here are the projects I've worked on through FreeCodeCamp's curriculum.</div>
   <hr>
-  <h2>Projects:</h2>
+  <h2>My freeCodeCamp Projects</h2>
   <div id="projects">
     The following projects are from the Responsive Web Design learning course on freeCodeCamp. They were built to practice my technical skills and to satisfy the requirements set by the course. I look forward to creating more fleshed-out projects as I discover and perfect my personal style, but for now, my focus is on learning the fundamentals.
     <ul>
