--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   </div>
   <hr>
   <div id="foot"><p>Connect with me on LinkedIn:<br />
-    @<a href="https://www.linkedin.com/in/andyglover1/" alt="andyglover1 on LinkedIn">andyglover1</a></p></div>
+    @<a href="https://www.linkedin.com/in/andyglover1/" alt="andyglover1 on LinkedIn">andyglover1</a><br />
+       <a href="https://www.linkedin.com/in/andyglover1/"><img src="linkedinbadge.png"/></a></p></div>
 </body>
 </html>
