another test push

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   
 </head>
 <body>
-  <h1>AndyGlover.io!</h1>
+  <h1>AndyGlover.io</h1>
   <div id="intro">I'm currently focused on learning to code by beginning with front end web development. Here are the projects I've worked on through FreeCodeCamp's curriculum.</div>
   <hr>
   <h2>My freeCodeCamp Projects</h2>
