added portrait to top

--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
     div { width: 500px; margin: 0 auto; background-color: gainsboro; padding:10px; border-radius: 5px; line-height: 25px;text-align:justify;}
     div#foot { text-align:center; margin-top: 10px; width:300px;}
     hr { margin: 25px auto 25px; width:500px;}
+    #portrait { width: 200px; height: 200px; border-radius: 100px;}
     </style>
     
   
 </head>
 <body>
-  <h1>AndyGlover.io</h1>
+    <img id="portrait" src="portrait.jpg" />
+    <h1>AndyGlover .io</h1>
   <div id="intro">I'm currently focused on learning to code by beginning with front end web development. Here are the projects I've worked on through FreeCodeCamp's curriculum.</div>
   <hr>
   <h2>My freeCodeCamp Projects</h2>
