Edited learning plan

--- a/index.html
+++ b/index.html
@@ -60,8 +60,6 @@
 </head>
 <body>
 
-
-
     <div id="topbanner-container">
         <img id="topbanner" src="banner.png" />
     </div>
@@ -92,9 +90,9 @@
             <li><b>CSS</b> - Visual design is crucial to a site's effectiveness, and CSS is the tool for it.</li><br />
             <li><b>JavaScript</b> - Interactivity and functionality turn static webpages into dynamic web applications.</li><br />
             <li><b>GitHub</b> - Version control is an indespensible utility for working on projects both independently and in teams. </li><br />
-            <li><b>Sass</b> - Taking design to the next level by using CSS in new and different ways.</li><br />
-            <li><b>React</b> - An up and coming front end framework for managing states of web interfaces.</li><br />
-            <li><b>Bootstrap</b> - Another front end framework, because I'm ambitious!</li><br />
+            <li><b>Sass</b> - Using a CSS preprocessor allows designers to take layouts to the next level.</li><br />
+            <li><b>React</b> - An up and coming javascript framework for managing states of web interfaces.</li><br />
+            <li><b>Bootstrap</b> - This CSS framework lets you do things!</li><br />
         </ul>
     </div>
     <hr>
