created separate stylesheet file

--- a/index.html
+++ b/index.html
@@ -2,61 +2,7 @@
 <html>
 <head>
   <title>Andy's Coding Projects</title>
-  <style>
-    h1{font-family:fantasy; font-size: 40px;}
-    h2{font-family:cursive; font-size: 25px;}
-    a{text-decoration: none;}
-    a:hover{text-decoration: underline; font-weight: bold;}
-    ul{text-align: left; }
-    body{ font-family: monospace; text-align:center; }
-    .section { width: 500px; margin: 0 auto; background-color: gainsboro; padding:10px; border-radius: 5px; line-height: 25px;text-align:justify;}
-    #foot { text-align:center; margin-top: 10px; width:300px;}
-    hr { margin: 25px auto 25px; width:500px;}
-      #topbanner-container {
-          position: relative;
-          top: 0;
-          height: 200px;
-          overflow: hidden;
-          vertical-align: bottom;
-          margin-bottom: -100px;
-      }
-      #topbanner {
-          width: 100%;
-          position: absolute;
-          bottom: 0;
-          transform: translateX(-50%);
-          opacity: 0.5;
-          /*transform: translateY(-50%);*/
-          /*margin-top: -200px;*/
-      }
-      #portrait-container {
-          margin: 0 auto;
-          position: relative;
-          background-color: white;
-          width: 200px;
-          height: 200px;
-          border-radius: 50%;
-          /*border:10px;*/
-      }
-      #portrait {
-          position: absolute;
-          margin: auto;
-          top: 0;
-          left: 0;
-          right: 0;
-          bottom: 0;
-          width: 90%;
-          height: 90%;
-          border-radius: 50%;
-      }
-      #banner {width: 500px;
-               border-radius: 10px;}
-        
-      .imgfade {opacity: 0.75;}
-      .imgfade:hover {opacity: 1;}
-    </style>
-    
-  
+  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 
