removed FCC projects and added portfolio placeholder

--- a/index.html
+++ b/index.html
@@ -15,16 +15,9 @@
     <h1>AndyGlover .io</h1>
     <div class="section" id="intro">I'm an independent learner focused on technology. I'm currently studying front end web development skills.</div>
     <hr>
-    <h2>My freeCodeCamp Projects</h2>
+    <h2>My Portfolio</h2>
     <div class="section" id="projects">
-        Here are a few freeCodeCamp projects that helped me learn fundamentals of responsive web design.
-        <ul>
-            <li><a href="marvin.html">Tribute</a></li>
-            <li><a href="survey.html">Survey</a></li>
-            <li><a href="productlanding.html">Product Landing</a></li>
-            <li><a href="techdoc.html">Tech Doc</a></li>
-            <li><a href="personalportfolio.html">Personal Portfolio</a></li>
-        </ul>
+        I'm currently building my portfolio, watch this space!
     </div>
     <hr>
     <h2>My Learning Plan</h2>
