Commented out 'learning plan' and edited text up top

--- a/index.html
+++ b/index.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Andy's Coding Projects</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-</head>
-<body>
-
+  <head>
+    <title>Andy's Coding Projects</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
     <div id="topbanner-container">
-        <img id="topbanner" src="banner.png" />
+      <img id="topbanner" src="banner.png" />
     </div>
     <div id="portrait-container">
-        <img class="imgfade" id="portrait" src="portrait.jpg" />
+      <img class="imgfade" id="portrait" src="portrait.jpg" />
     </div>
     <h1>AndyGlover .io</h1>
-    <div class="section" id="intro">I'm an independent learner focused on technology. I'm currently studying front end web development skills.</div>
-    <hr>
+    <div class="section" id="intro">
+      Hey, thanks for checking out my web site. Watch this space!
+    </div>
+    <hr />
     <h2>My Portfolio</h2>
     <div class="section" id="projects">
-        I'm currently building my portfolio, watch this space!
+      <!-- I'm currently building my portfolio, watch this space! -->
+      Coming soon!
     </div>
-    <hr>
-    <h2>My Learning Plan</h2>
-    <div class="section" id="techstack">
-        <p>Here are the technologies I plan to study and build into my portfolio in the future.</p>
+    <hr />
+    <!-- <h2>My Learning Plan</h2>
+    <div class="section" id="techstack"> -->
+    <!-- <p>Here are the technologies I plan to study and build into my portfolio in the future.</p>
         <img class="imgfade" src="techlogos.png" width="100%" />
         <ul>
             <li><b>HTML</b> - The backbone and structure of the web. Making sites accessible is as important as making them look good.</li><br />
@@ -32,20 +34,23 @@
             <li><b>Sass</b> - Using a CSS preprocessor allows designers to take layouts to the next level.</li><br />
             <li><b>React</b> - An up and coming javascript framework for managing states of web interfaces.</li><br />
             <li><b>Bootstrap</b> - This CSS framework lets you do things!</li><br />
-        </ul>
-    </div>
-    <hr>
+        </ul> -->
+    <!-- </div>
+    <hr /> -->
     <div class="section" id="foot">
-        <p>
-            Connect with me on LinkedIn:<br />
-            @<a href="https://www.linkedin.com/in/andyglover1/" alt="andyglover1 on LinkedIn">andyglover1</a><br />
-            <a href="https://www.linkedin.com/in/andyglover1/"><img class="imgfade" id="badge" src="linkedinbadge.png" /></a>
-        </p>
-
+      <p>
+        Connect with me on LinkedIn:<br />
+        @<a
+          href="https://www.linkedin.com/in/andyglover1/"
+          alt="andyglover1 on LinkedIn"
+          >andyglover1</a
+        ><br />
+        <a href="https://www.linkedin.com/in/andyglover1/"
+          ><img class="imgfade" id="badge" src="linkedinbadge.png"
+        /></a>
+      </p>
     </div>
     <hr />
     <img class="imgfade" id="banner" src="banner.png" />
-
-
-</body>
+  </body>
 </html>
