--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
       <p>
         Connect with me on LinkedIn:<br />
         @<a
-          href="https://www.linkedin.com/in/andyglover1/"
-          alt="andyglover1 on LinkedIn"
+          href="https://www.linkedin.com/in/andygloverdev/"
+          alt="andygloverdev on LinkedIn"
           >andyglover1</a
         ><br />
-        <a href="https://www.linkedin.com/in/andyglover1/"
+        <a href="https://www.linkedin.com/in/andygloverdev/"
           ><img class="imgfade" id="badge" src="linkedinbadge.png"
         /></a>
       </p>
